--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,14 +83,14 @@
             <p id="slogan2">Feuilletez les visages de celles et ceux qui attendent simplement un peu de votre temps.<br>
                 sourire porte une histoire, chaque rencontre est une promesse.</p>
             <div class="heroesPics">
-                <div class="img1"><img src="/backend/images/danie-franco-ClHY-KyvI1M-unsplash.jpg"></div>
-                <div class="img2"><img src="/backend/images/tim-mossholder-FRPbQvAwY10-unsplash.jpg"></div>
-                <div class="img3"><img src="/backend/images/tatiana-zanon-MMhazsT2wtM-unsplash.jpg"></div>
-                <div class="img4"><img src="/backend/images/quentin-mahe-a6jCS61X1Hg-unsplash.jpg"></div>
-                <div class="img5"><img src="/backend/images/shimo-yann-7nTFrV1xQGE-unsplash.jpg"></div>
-                <div class="img6"><img src="/backend/images/mohammad-samir-huHXKc_usoA-unsplash.jpg"></div>
-                <div class="img7"><img src="/backend/images/vladimir-soares-z_8Jqe0Cc-s-unsplash.jpg"></div>
-                <div class="img8"><img src="/backend/images/michael-matveev-Bk8zT4gLLt0-unsplash.jpg"></div>
+                <div class="img1"><img src="/images/danie-franco-ClHY-KyvI1M-unsplash.jpg"></div>
+                <div class="img2"><img src="/images/tim-mossholder-FRPbQvAwY10-unsplash.jpg"></div>
+                <div class="img3"><img src="/images/tatiana-zanon-MMhazsT2wtM-unsplash.jpg"></div>
+                <div class="img4"><img src="/images/quentin-mahe-a6jCS61X1Hg-unsplash.jpg"></div>
+                <div class="img5"><img src="/images/shimo-yann-7nTFrV1xQGE-unsplash.jpg"></div>
+                <div class="img6"><img src="/images/mohammad-samir-huHXKc_usoA-unsplash.jpg"></div>
+                <div class="img7"><img src="/images/vladimir-soares-z_8Jqe0Cc-s-unsplash.jpg"></div>
+                <div class="img8"><img src="/images/michael-matveev-Bk8zT4gLLt0-unsplash.jpg"></div>
             </div>
             <div class="btn-Profil">
                 <a href="Pages/Recherche.html" id="profil">Voir tous les profils</a>
@@ -140,9 +140,9 @@
                 main
                 à une personne âgée, vous lui offrez bien plus qu'une visite : une vraie bouffée de chaleur humaine.</p>
             <div class="cta-button">
-                <button id="visite">Programmer une visite</button>
+                <a id="visite" href="/frontend/pages/meeting.html">Programmer une visite</a>
                 <button id="don">Faire un don🫶 </button>
-                <button id="benevole">Devenir bénévole</button>
+                <a id="benevole" href="/frontend/pages/volantaire.html">Devenir bénévole</a>
             </div>
         </section>
     </main>
