--- a/frontend/pages/meeting.html
+++ b/frontend/pages/meeting.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <script src="/frontend/script/meeting.js" defer></script>
 </head>
 
 <body>
