--- a/frontend/pages/volantaire.html
+++ b/frontend/pages/volantaire.html
@@ -25,10 +25,10 @@
 
             </div>
             <ul class="menu">
-                <li><a href="/index.html"><i data-lucide="home"></i>Accueil</a></li>
-                <li><a href="/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
+                <li><a href="/frontend/index.html"><i data-lucide="home"></i>Accueil</a></li>
+                <li><a href="/frontend/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
                 <li><a href="#"><i data-lucide="book-open"></i>Guide du partage</a></li>
-                <li><a href="/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
+                <li><a href="/frontend/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
             </ul>
             <div>
                 <a href="#" id="donate-btn">Faire un don<i data-lucide="heart-handshake"></i></a>
