--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaence</title>
-    <link rel="stylesheet" href="/frontend/css/style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/frontend/images/favicon.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,9 +25,9 @@
             </div>
             <ul class="menu">
                 <li><a href="/index.html"><i data-lucide="home"></i>Accueil</a></li>
-                <li><a href="/frontend/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
+                <li><a href="pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
                 <li><a href="#"><i data-lucide="book-open"></i>Guide du partage</a></li>
-                <li><a href="/frontend/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
+                <li><a href="/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
             </ul>
             <div>
                 <a href="#" id="donate-btn">Faire un don<i data-lucide="heart-handshake"></i></a>
@@ -48,8 +48,8 @@
         </section>
         <div class="container">
             <div class="searchCard-container">
-                <form action="/frontend/pages/recherche.html" class="searchForm" role="search" aria-label="Recherche de profils"
-                    action="/frontend/pages/recherche.html" method="get">
+                <form action="/pages/recherche.html" class="searchForm" role="search" aria-label="Recherche de profils"
+                    method="get">
 
                     <div class="field">
                         <label for="momentShared">Moment à partager</label>
@@ -140,9 +140,9 @@
                 main
                 à une personne âgée, vous lui offrez bien plus qu'une visite : une vraie bouffée de chaleur humaine.</p>
             <div class="cta-button">
-                <a id="visite" href="/frontend/pages/meeting.html">Programmer une visite</a>
+                <a id="visite" href="/pages/meeting.html">Programmer une visite</a>
                 <button id="don">Faire un don🫶 </button>
-                <a id="benevole" href="/frontend/pages/volantaire.html">Devenir bénévole</a>
+                <a id="benevole" href="/pages/volantaire.html">Devenir bénévole</a>
             </div>
         </section>
     </main>
