--- a/pages/meeting.html
+++ b/pages/meeting.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/backend/images/favicon.ico">
-    <link rel="stylesheet" href="/frontend/css/meeting.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/css/meeting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <script src="/frontend/script/meeting.js" defer></script>
+        <script src="/script/meeting.js" defer></script>
 </head>
 
 <body>
@@ -23,10 +23,10 @@
                 <p>Ada<span id="ence">ence</span></p>
             </div>
             <ul class="menu">
-                <li><a href="/frontend/index.html"><i data-lucide="home"></i>Accueil</a></li>
-                <li><a href="/frontend/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
+                <li><a href="/index.html"><i data-lucide="home"></i>Accueil</a></li>
+                <li><a href="/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
                 <li><a href="#"><i data-lucide="book-open"></i>Guide du partage</a></li>
-                <li><a href="/frontend/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a>
+                <li><a href="/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a>
                 </li>
             </ul>
             <div>
