--- a/pages/recherche.html
+++ b/pages/recherche.html
@@ -11,8 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <script src="/frontend/script/recherche.js" defer></script>
-  <link rel="stylesheet" href="/frontend/css/recherche.css">
+  <script src="/script/recherche.js" defer></script>
+  <link rel="stylesheet" href="/css/recherche.css">
 </head>
 
 <body>
@@ -23,10 +23,10 @@
         <p>Ada<span id="ence">ence</span></p>
       </div>
       <ul class="menu">
-        <li><a href="/frontend/index.html"><i data-lucide="home"></i>Accueil</a></li>
-        <li><a href="/frontend/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
+        <li><a href="/index.html"><i data-lucide="home"></i>Accueil</a></li>
+        <li><a href="/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
         <li><a href="#"><i data-lucide="book-open"></i>Guide du partage</a></li>
-        <li><a href="/frontend/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
+        <li><a href="/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
       </ul>
       <div>
         <a href="#" id="donate-btn">Faire un don<i data-lucide="heart-handshake"></i></a>
