--- a/pages/volantaire.html
+++ b/pages/volantaire.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaence</title>
-    <link rel="stylesheet" href="/frontend/css/volunteers.css">
+    <link rel="stylesheet" href="/css/volunteers.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,10 +25,10 @@
 
             </div>
             <ul class="menu">
-                <li><a href="/frontend/index.html"><i data-lucide="home"></i>Accueil</a></li>
-                <li><a href="/frontend/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
+                <li><a href="/index.html"><i data-lucide="home"></i>Accueil</a></li>
+                <li><a href="/pages/recherche.html"><i data-lucide="accessibility"></i>Je rends visite</a></li>
                 <li><a href="#"><i data-lucide="book-open"></i>Guide du partage</a></li>
-                <li><a href="/frontend/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
+                <li><a href="/pages/volantaire.html"><i data-lucide="hand-helping"></i>Devenir bénévole</a></li>
             </ul>
             <div>
                 <a href="#" id="donate-btn">Faire un don<i data-lucide="heart-handshake"></i></a>
