--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="img8"><img src="/images/michael-matveev-Bk8zT4gLLt0-unsplash.jpg"></div>
             </div>
             <div class="btn-Profil">
-                <a href="Pages/Recherche.html" id="profil">Voir tous les profils</a>
+                <a href="/pages/recherche.html" id="profil">Voir tous les profils</a>
             </div>
         </section>
         <section id="working-steps">
